--- a/Question3.ipynb
+++ b/Question3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -287,9 +287,10 @@
    "metadata": {},
    "source": [
     "## Data Cleaning\n",
-    "1. Covert categorical variables into numercial\n",
-    "2. Create new variable that represent completion of certain action (ex: `bgc`:Back ground check consent)\n",
-    "3. Replace NaNs with 0 or \"Unknown[variable]\" where possible. Where variable corresponds to the column name"
+    "1. Converting categorical variables into numercial\n",
+    "2. Create new variable that represent completion of certain action (ex: `bgc`: Back ground check consent)\n",
+    "3. Replace NaNs with 0 or \"Unknown[variable]\" where possible. Where variable corresponds to the column name\n",
+    "4. Creating target variable `has_driven` that has value 1 or 0 (True/False) that we will try to predict"
    ]
   },
   {
@@ -301,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -321,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -339,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -352,12 +353,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Converting categorical variable to numeric. That is the value of each category becomes a new variable with 1 or 0. "
+    "Converting categorical variables to numeric. That is the value of each category becomes a new variable with 1 or 0.\n",
+    "NaN values will become `Unknown[Variable]` where `Variable` corresponds to the original column name."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -397,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -557,7 +559,7 @@
        "[4 rows x 431 columns]"
       ]
      },
-     "execution_count": 195,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -596,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So we have same row count but clean data has more columns (variables) as expected."
+    "So we have same row count but `clean_data` has more columns (variables) than original `data`, as expected."
    ]
   },
   {
@@ -616,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -627,7 +629,7 @@
        "6137"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -656,7 +658,7 @@
        "54681"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -672,12 +674,12 @@
     "The question was 'What fraction of the driver\n",
     "signups took a first trip?'\n",
     "\n",
-    "The answer is the ratio of number of unique drivers in the 'driver_complete_ft' table to the number of unique drivers in the original 'data' table."
+    "The answer is the ratio of number of drivers in `has_driven` list to the number of unique drivers in the original `data` table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -686,7 +688,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Answer =  0.11\n"
+      "Answer =  0.11\n"
      ]
     }
    ],
@@ -716,38 +718,29 @@
     "collapsed": false
    },
    "source": [
-    "Splitting data set into training and test. Will use pythons **sklearn** libraries."
+    "Splitting data set into training and test. 67% to training set and 33% to test set. Will use pythons **sklearn** libraries."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "has_driven = pd.Series(has_driven)"
+    "from sklearn.cross_validation import train_test_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "from sklearn.cross_validation import train_test_split\n",
+    "has_driven = pd.Series(has_driven)\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(clean_data, has_driven, test_size=0.33,random_state=43)"
    ]
   },
@@ -760,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -790,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -802,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -816,7 +809,7 @@
        "          verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +820,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Y_predict = logistic.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Measuring: Accuracy, Precision and Recall of the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score,recall_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.89\n",
+      "Precission:  0.52\n",
+      "Recall:  0.42\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'Accuracy: ', round(accuracy_score(Y_test,Y_predict),2)\n",
+    "print 'Precission: ', round(precision_score(Y_test,Y_predict),2)\n",
+    "print 'Recall: ', round(recall_score(Y_test,Y_predict),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking for the coefficients of the model to identify 'high impact' variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -843,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -854,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -863,6 +915,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Top 10 positive\n",
       "     Coeff      Variable\n",
       "428  3.939           bgc\n",
       "195  1.155     GLA-Class\n",
@@ -874,6 +927,8 @@
       "201  0.940            GX\n",
       "335  0.937           SRX\n",
       "181  0.927          Flex\n",
+      "\n",
+      "Top 10 negative\n",
       "     Coeff      Variable\n",
       "55  -1.606   UnknownMake\n",
       "384 -1.606  UnknownModel\n",
@@ -889,58 +944,33 @@
     }
    ],
    "source": [
+    "print 'Top 10 positive'\n",
     "print Variable_strength.sort_values(by='Coeff', ascending=False).iloc[0:10]\n",
+    "print '\\nTop 10 negative'\n",
     "print Variable_strength.sort_values(by='Coeff', ascending=True).iloc[0:10]"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 242,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "from sklearn.metrics import accuracy_score, precision_score,recall_score,f1_score"
+    "* `bgc` variable, that is background check consent event seems to have the highest impact.\n",
+    "* Next strongest variables in this model are vehicle models (or lack thereof)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dummy models for comparison\n",
+    "To compare performance of the model we create two simple models that either predict that all sign ups will drive or all sign ups will not drive."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "Y_predict = logistic.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.893987254087\n",
-      "0.523898199876\n",
-      "0.424120603015\n"
-     ]
-    }
-   ],
-   "source": [
-    "print accuracy_score(Y_test,Y_predict)\n",
-    "print precision_score(Y_test,Y_predict)\n",
-    "print recall_score(Y_test,Y_predict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -952,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -961,32 +991,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.110279855916\n",
-      "0.110279855916\n",
-      "1.0\n"
+      "Performance of \"All drive\" dummy model\n",
+      "Accuracy:  0.11\n",
+      "Precision:  0.11\n",
+      "Recall:  1.0\n"
      ]
     }
    ],
    "source": [
-    "print accuracy_score(Y_test,Y_p_alltrue)\n",
-    "print precision_score(Y_test,Y_p_alltrue)\n",
-    "print recall_score(Y_test,Y_p_alltrue)"
+    "print 'Performance of \"All drive\" dummy model'\n",
+    "print 'Accuracy: ', round(accuracy_score(Y_test,Y_p_alltrue),2)\n",
+    "print 'Precision: ', round(precision_score(Y_test,Y_p_alltrue),2)\n",
+    "print 'Recall: ', round(recall_score(Y_test,Y_p_alltrue),2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 40,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.889720144084\n",
-      "0.0\n",
-      "0.0\n"
+      "Performance of \"Nobody drives\" dummy model\n",
+      "Accuracy:  0.89\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n"
      ]
     },
     {
@@ -999,9 +1033,305 @@
     }
    ],
    "source": [
-    "print accuracy_score(Y_test,Y_p_allfalse)\n",
-    "print precision_score(Y_test,Y_p_allfalse)\n",
-    "print recall_score(Y_test,Y_p_allfalse)"
+    "print 'Performance of \"Nobody drives\" dummy model'\n",
+    "print 'Accuracy: ', round(accuracy_score(Y_test,Y_p_allfalse),2)\n",
+    "print 'Precision: ', round(precision_score(Y_test,Y_p_allfalse),2)\n",
+    "print 'Recall: ', round(recall_score(Y_test,Y_p_allfalse),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false
+   },
+   "source": [
+    "### Another try with fewer features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Will remove vehicle model from the data and rerun the logistic regression."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "r_clean_data=pd.concat([cities,os,channel,vehicle_make, subdata],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(54681, 62)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "r_clean_data.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The new data has only 62 features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X_train_r, X_test_r, Y_train_r, Y_test_r = train_test_split(r_clean_data, has_driven, test_size=0.33,random_state=43)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logistic_r = linear_model.LogisticRegression()\n",
+    "logistic.fit(X_train_r,Y_train_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Y_predict_r = logistic.predict(X_test_r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy:  0.89\n",
+      "Precission:  0.52\n",
+      "Recall:  0.38\n"
+     ]
+    }
+   ],
+   "source": [
+    "print 'Accuracy: ', round(accuracy_score(Y_test_r,Y_predict_r),2)\n",
+    "print 'Precission: ', round(precision_score(Y_test_r,Y_predict_r),2)\n",
+    "print 'Recall: ', round(recall_score(Y_test_r,Y_predict_r),2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Kmeans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "knn_model3 = KNeighborsClassifier(n_neighbors=3)\n",
+    "knn_model5 = KNeighborsClassifier(n_neighbors=5)\n",
+    "knn_model10 = KNeighborsClassifier(n_neighbors=10)\n",
+    "knn_model20 = KNeighborsClassifier(n_neighbors=20)\n",
+    "knn_model50 = KNeighborsClassifier(n_neighbors=50)\n",
+    "knn_model100 = KNeighborsClassifier(n_neighbors=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KNeighborsClassifier(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "           metric_params=None, n_jobs=1, n_neighbors=100, p=2,\n",
+       "           weights='uniform')"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "knn_model3.fit(X_train,Y_train)\n",
+    "knn_model5.fit(X_train,Y_train)\n",
+    "knn_model10.fit(X_train,Y_train)\n",
+    "knn_model20.fit(X_train,Y_train)\n",
+    "knn_model50.fit(X_train,Y_train)\n",
+    "knn_model100.fit(X_train,Y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Y_pred3 = knn_model3.predict(X_test)\n",
+    "Y_pred5 = knn_model5.predict(X_test)\n",
+    "Y_pred10 = knn_model10.predict(X_test)\n",
+    "Y_pred20 = knn_model20.predict(X_test)\n",
+    "Y_pred50 = knn_model50.predict(X_test)\n",
+    "Y_pred100 = knn_model100.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k=3: 0.8832\n",
+      "k=5: 0.8861\n",
+      "k=10: 0.8885\n",
+      "k=20: 0.8892\n",
+      "k=50: 0.8913\n",
+      "k=100: 0.8913\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"k=3:\", round(accuracy_score(Y_test,Y_pred3),4)\n",
+    "print \"k=5:\", round(accuracy_score(Y_test,Y_pred5),4)\n",
+    "print \"k=10:\", round(accuracy_score(Y_test,Y_pred10),4)\n",
+    "print \"k=20:\", round(accuracy_score(Y_test,Y_pred20),4)\n",
+    "print \"k=50:\", round(accuracy_score(Y_test,Y_pred50),4)\n",
+    "print \"k=100:\", round(accuracy_score(Y_test,Y_pred100),4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k=3: 0.4684\n",
+      "k=5: 0.4819\n",
+      "k=10: 0.4918\n",
+      "k=20: 0.4968\n",
+      "k=50: 0.51\n",
+      "k=100: 0.5103\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"k=3:\", round(precision_score(Y_test,Y_pred3),4)\n",
+    "print \"k=5:\", round(precision_score(Y_test,Y_pred5),4)\n",
+    "print \"k=10:\", round(precision_score(Y_test,Y_pred10),4)\n",
+    "print \"k=20:\", round(precision_score(Y_test,Y_pred20),4)\n",
+    "print \"k=50:\", round(precision_score(Y_test,Y_pred50),4)\n",
+    "print \"k=100:\", round(precision_score(Y_test,Y_pred100),4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k=3: 0.4402\n",
+      "k=5: 0.4337\n",
+      "k=10: 0.3296\n",
+      "k=20: 0.3523\n",
+      "k=50: 0.3603\n",
+      "k=100: 0.3598\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"k=3:\", round(recall_score(Y_test,Y_pred3),4)\n",
+    "print \"k=5:\", round(recall_score(Y_test,Y_pred5),4)\n",
+    "print \"k=10:\", round(recall_score(Y_test,Y_pred10),4)\n",
+    "print \"k=20:\", round(recall_score(Y_test,Y_pred20),4)\n",
+    "print \"k=50:\", round(recall_score(Y_test,Y_pred50),4)\n",
+    "print \"k=100:\", round(recall_score(Y_test,Y_pred100),4)"
    ]
   },
   {
