--- a/Question3.ipynb
+++ b/Question3.ipynb
@@ -4,6 +4,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Part 1 SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For each of the cities 'Qarth' and 'Meereen', calculate 90th percentile difference between Actual and Predicted ETA for all completed trips within the last 30 days."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```SQL\n",
+    "select city_name, percentile_disc(0.9) within group (order by time_diff) as time_diff_90\n",
+    "from (\n",
+    "      select table1.city_id, table2.city_name,\n",
+    "             (table1.actual_eta-table1.predicted_eta) as time_diff\n",
+    "      from trips as table1\n",
+    "      join cities as table2\n",
+    "      on table1.city_id=table2.city_id\n",
+    "      where table1.request_at > NOW() - INTERVAL '30 days'\n",
+    "      and table1.status = 'completed'\n",
+    "      and table2.city_name in ('Qarth','Meereen')\n",
+    "     )\n",
+    "group by city_name;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* A signup is defined as an event labeled ‘sign_up_success’ within the events table. For each city (‘Qarth’ and ‘Meereen’) and each day of the week, determine the percentage of signups in the first week of 2016 that resulted in completed a trip within 168 hours of the sign up date."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```SQL\n",
+    "select table3.city_name,\n",
+    "       extract(DOW from table1._ts) as day_of_week, count(*) as prctg\n",
+    "from events as table1\n",
+    "join trips as table2\n",
+    "on table1.city_id = table2.city_id\n",
+    "join cities as table3\n",
+    "on table1.city_id=table3.city_id\n",
+    "where table1.event_name = 'sign_up_success'\n",
+    "and table1._ts BETWEEN '2016-01-01 00:00:00'::timestamp and '2016-01-08 00:00:00'::timestamp\n",
+    "and table3.city_name in ('Qarth','Meereen')\n",
+    "and DATEDIFF(hour, table1._ts, table2.request_at)<=168\n",
+    "and table2.status = 'completed'\n",
+    "group by 1,2;\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Part 2 Experiment and metrics design\n",
+    "#### Success metrics\n",
+    "* Primary success metric should be active user count.\n",
+    "Active user is defined as any partner that frequently uses advanced features of the app. For example: Use of heat map, action on the Uber feed, use of earnings and ratings tabs.\n",
+    "Success could be defined as higher percentage of active users compared to the old app.\n",
+    "* Secondary metrics can be:  \n",
+    "    1.\tApp rating in the app store\n",
+    "    2.\tSignificant improvements in partner’s average earnings per trip\n",
+    "    3.\tSignificant improvement in partner’s rating\n",
+    "\n",
+    "#### Testing\n",
+    "1.\tFor regions where both old and new apps are being used:\n",
+    "    a.\tCalculate fractions of active users for both apps\n",
+    "    b.\tCalculate average earnings per trip for both apps, across all partners\n",
+    "    c.\tCalculate average ratings of partners for both apps, across all partners\n",
+    "2.\tFor people that switched to new app:\n",
+    "    a.\tCalculate how many were ‘active’ before and after (Testing whether the new app is more engaging)\n",
+    "    b.\tCalculate if the switch to a new app caused a statistically significant increase or decrease on average earning per trip.\n",
+    "    c.\tCalculate if the switch to a new app caused a statistically significant increase or decrease on the rating of the partner.\n",
+    "3.\tCompare apps store ratings for comparable periods  \n",
+    "\n",
+    "First test, comparing app performance across all partners can yield statistically significant results faster, since we will be looking at all partners and average across all. \n",
+    "Second test will be more precise measurement but will need longer time since calculation will be made on individual partner level.\n",
+    "Third test is straightforward and can yield results relatively fast.\n",
+    "Based on the result(s) of the first test (and probably third), we can judge on the duration or implementation of the second test.\n",
+    "\n",
+    "#### Recommendation\n",
+    "Based on the defined metrics (% of active users, app rating, earnings per trip, rating of the partner):\t\n",
+    "* If the new app performs better in at least one metric, especially primary, while other metrics are unaffected, we would recommend launch of the new app.\n",
+    "* If the new app is performing worse in at least one metric, especially primary, while other metrics are unaffected, we would recommend to roll it back.\n",
+    "* In all other cases we would recommend further studies if feasible."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Part 3 Data analysis"
    ]
   },
