--- a/Question3.ipynb
+++ b/Question3.ipynb
@@ -54,7 +54,7 @@
     "join cities as table3\n",
     "on table1.city_id=table3.city_id\n",
     "where table1.event_name = 'sign_up_success'\n",
-    "and table1._ts BETWEEN '2016-01-01 00:00:00'::timestamp and '2016-01-08 00:00:00'::timestamp\n",
+    "and table1._ts between '2016-01-01 00:00:00'::timestamp and '2016-01-08 00:00:00'::timestamp\n",
     "and table3.city_name in ('Qarth','Meereen')\n",
     "and DATEDIFF(hour, table1._ts, table2.request_at)<=168\n",
     "and table2.status = 'completed'\n",
